@@ -27,29 +27,18 @@ public class SearchServlet extends HttpServlet {
 	 */
 	protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
 		// TODO Auto-generated method stub
-		String condition = request.getParameter("condition");
-		
-		Object value;
-		boolean notEmptyOrNull = true;
-		
-		if(condition.equals("id"))
-		{
-			value = request.getParameter("value").isEmpty() ? 0 : new Integer(request.getParameter("value"));
-			notEmptyOrNull = (Integer)value!=0;
-		}
-		else
-		{
-			value = request.getParameter("value");
-			notEmptyOrNull = !((String)value).isEmpty();
-		}
+		int contactId = request.getParameter("selectedId")!= null ? Integer.valueOf(request.getParameter("selectedId")) : -1;
+		System.out.println(contactId);
 			
-		if(notEmptyOrNull)
+		if(contactId != -1)
 		{
 			ContactService cs = new ContactService();
-			Contact c = cs.searchContact(condition, value);
+			Contact c = cs.searchContact(contactId);
 			
+
 			if(c != null)
 			{
+				System.out.println(c.getNom());
 				request.setAttribute("idResult", c.getId());
 				request.setAttribute("nomResult", c.getNom());
 				request.setAttribute("prenomResult", c.getPrenom());
@@ -58,7 +47,7 @@ public class SearchServlet extends HttpServlet {
 			}
 			else
 			{
-				request.setAttribute("errorValue", value);
+				request.setAttribute("errorId",contactId);
 				request.setAttribute("errorMessage", "Aucun résultat n'a été trouvé !");
 				request.setAttribute("errorType", "noRecord");
 				request.getRequestDispatcher("searchContact.jsp").forward(request, response);
@@ -66,7 +55,7 @@ public class SearchServlet extends HttpServlet {
 		}
 		else
 		{
-			request.setAttribute("errorValue", value);
+			request.setAttribute("errorId",contactId);
 			request.setAttribute("errorMessage", "Veuillez remplir tous les champs ! ");
 			request.setAttribute("errorType", "searchEmptyField");
 			request.getRequestDispatcher("searchContact.jsp").forward(request, response);
